tests/positive/test_drop.orb
# TODO+ can't pass/ret noDrop (unless ret in macro)
# TODO+ tests, pos/neg, eval/compl (cast on noDrop, raw containing noDrop)
# TODO+ verify base.orb
# TODO+ check examples still work
import "util/io.orb";

data Foo;

fnc dropFoo (val:Foo::noDrop) ();

data Foo {
    x:i32
}::((drop dropFoo));

fnc dropFoo (val:Foo::noDrop) () {
    println_i32 (. val x);
};

fnc main () () {
};