tests/negative/test_pass_invoke_arg_non_ref.orb
data Foo {
    x:i32
} (eval (fnc dropFoo (val:Foo::noDrop) () {}));

eval (fnc makeFoo () Foo {
    sym f:Foo;
    ret f;
});

mac bar (x::preprocess) {
    block Foo {
        pass x;
    };

    ret \(block {});
};

fnc main () () {
    bar (makeFoo);
};